--- a/test_Service_Skidata/App.config
+++ b/test_Service_Skidata/App.config
@@ -1,6 +1,55 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <behaviors>
+            <serviceBehaviors>
+                <behavior name="">
+                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+                    <serviceDebug includeExceptionDetailInFaults="false" />
+                </behavior>
+            </serviceBehaviors>
+        </behaviors>
+        <services>
+            <service name="SkiData.CP.FormatService.CustomerTestClient.ServiceSkiData">
+                <endpoint address="" binding="basicHttpBinding" contract="SkiData.CP.FormatService.CustomerTestClient.IServiceSkiData">
+                    <identity>
+                        <dns value="localhost" />
+                    </identity>
+                </endpoint>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+                <host>
+                    <baseAddresses>
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/SkiData.CP.FormatService.CustomerTestClient/ServiceSkiData/" />
+                    </baseAddresses>
+                </host>
+            </service>
+        </services>
+        <bindings>
+            <wsHttpBinding>
+                <binding name="soapFormattingEndpoint">
+                    <security mode="TransportWithMessageCredential">
+                        <transport clientCredentialType="None" />
+                        <message clientCredentialType="Certificate" />
+                    </security>
+                </binding>
+                <binding name="soapFormattingEndpoint1">
+                    <security mode="TransportWithMessageCredential">
+                        <transport clientCredentialType="None" />
+                        <message clientCredentialType="Certificate" />
+                    </security>
+                </binding>
+            </wsHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="https://localhost:10232/" binding="wsHttpBinding"
+                bindingConfiguration="soapFormattingEndpoint" contract="ServiceSkiData.IFormattingService"
+                name="soapFormattingEndpoint" />
+            <endpoint address="https://localhost:10232/" binding="wsHttpBinding"
+                bindingConfiguration="soapFormattingEndpoint1" contract="SkiDataFormatingServiceSingle.IFormattingService"
+                name="soapFormattingEndpoint1" />
+        </client>
+    </system.serviceModel>
 </configuration>
